# XillenStealer

./: .gitignore  BUILD_BUILDER.md  BUILD_INSTRUCTIONS.md  FINAL_PREMIUM_GUIDE.md  FINAL_REPORT.md  FINAL_STATUS.md  FIXES_COMPLETED.md  FIX_V4_INSTRUCTIONS.md  LICENSE  LOGIN_FIX.md  LOGIN_INSTRUCTIONS.md  NAVIGATION_FIXES_COMPLETED.md  README!!!!!.txt  README.md  README_EN.md  README_MODERN.md  README_PREMIUM.md  README_V5.md  README_V5_FINAL.md  README_V5_ULTIMATE.md  RELEASE_BUILDER.txt  RELEASE_INSTRUCTIONS.txt  RELEASE_NOTES.md  UI_FIXES_COMPLETED.md  V4_VS_V5.md  XillenStealer Builder.spec  XillenStealerAntiDot.py  XillenStealer_Builder.spec  alternatives.md  build_builder_exe.py  build_builder_release.bat  build_stealer.bat  builder.py  builder_status.txt  commit_fix.bat  compile_v5.py  compile_v5_ultimate.py  create_release.ps1  final_push.bat  fix_release.ps1  (+24 more)
XillenStealer-V5-CPP/: BUILD_AND_RUN.bat  CMakeLists.txt  GO.txt  README.md  README_PANEL.md  RUN.bat  RUN.txt  RUN_FULL.bat  RUN_TEST.md  STATUS.md  browser_extractor.py  build_complete.bat  build_debug.bat  build_debug.sh  build_final.bat  build_final.sh  build_final_100.bat  build_full.bat  build_no_sqlite.bat  build_output.txt  build_simple.bat  build_simple_debug.bat  build_using_msys.sh  build_v5.bat  build_working.bat  compiler_test.txt  final_build.cpp  full_build.cpp  full_real_stealer.cpp  output.txt  quick_build.cpp  quick_test.py  run_test.bat  start_panel.bat  telegram_sender.py  test.bat  test.cpp  test_build.sh  test_decrypt.py  test_link.sh  (+14 more)
XillenStealer-V5-CPP/electron_builder/: builder_backend.py  builder_status.txt  main.js  package.json  preload.js  temp_status.txt
XillenStealer-V5-CPP/electron_builder/dist_release/: builder-debug.yml
XillenStealer-V5-CPP/electron_builder/renderer/: index.html  renderer.js
XillenStealer-V5-CPP/panel/: xillen.db
XillenStealer-V5-CPP/server/: api_handler.cpp  api_handler.h  panel_server.py
XillenStealer-V5-CPP/src/collectors/: app_collector.cpp  app_collector.h  backup_collector.cpp  backup_collector.h  biometric_collector.cpp  biometric_collector.h  browser_collector.cpp  browser_collector.h  browser_decryptor.cpp  browser_decryptor.h  clipboard_collector.cpp  clipboard_collector.h  clipboard_history_collector.cpp  clipboard_history_collector.h  cloud_collector.cpp  cloud_collector.h  config_collector.cpp  config_collector.h  database_collector.cpp  database_collector.h  (+50 more)
core/rust_engine/: Cargo.toml  build.rs  py_integration.py
(+119 files in other folders)
