[package]
name = "xillen_engine"
version = "5.0.0"
edition = "2021"

[lib]
name = "xillen_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["full"] }
ntapi = "0.4"
obfstr = "0.4"
hex = "0.4"
base64 = "0.21"
tokio = { version = "1.0", features = ["full"] }

[dependencies.windows]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Registry",
  "Win32_Security",
  "Win32_Storage_FileSystem"
]
